--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,18 @@
 # Changelog
 
+## [0.0.4] - 04/09/2019
+
+### Changed
+ - moved variables "rules" and "rules_to_execute" from file "index.ts" to a separate file "rules.ts"
+ - "rules_to_execute" variable to "rulesToExecute"
+ - code optimization
+
+### Updated
+ - package @types/lodash to version 4.14.138
+ - package @types/node to version 12.7.2
+ - package tslint to version 5.19.0
+ - package typescript to version 3.6.2
+
 ## [0.0.3] - 12/08/2019
 
 ### Added
