added dom interface to the evaluation report

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.0.4] - 12/09/2019
+
+### Added
+ - Dom interface to the evaluation report
+
 ## [0.0.3] - 12/08/2019
 
 ### Added
