--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,17 @@
 # Changelog
 
+## [0.0.5] - 17/09/2019
+
+### Added
+ - module "html-techniques"
+ - module "css-techniques"
+ - module "best-practices"
+
+### Updated
+ - package @qualweb/get-dom-puppeteer to version 0.0.4
+ - package @qualweb/types to version 0.0.24
+ - package @qualweb/earl-reporter to version 0.0.4
+
 ## [0.0.4] - 12/09/2019
 
 ### Added
