fixed some bugs

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.1.1] - 14/10/2019
+
+### Fixed
+ - a bug where two evaluations followed were giving incorrect results 
+
 ## [0.1.0] - 14/10/2019
 
 ### Added
