--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.1.3] - 17/10/2019
+
+### Updated
+ - all rules so that they can have an outcome = warning
+
 ## [0.1.2] - 11/10/2019
 
 ### Added
