--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.1.4] - 29/10/2019
+
+### Added
+ - rules 6, 8-14, 18 to the implemented rules
+
 ## [0.1.3] - 17/10/2019
 
 ### Updated
