--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.1.3] - 29/10/2019
+
+### Updated
+ - act-rules module with more implemented rules
+
 ## [0.1.2] - 14/10/2019
 
 ### Fixed
