updated act-rues module

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,10 +1,14 @@
 # Changelog
 
-## [0.1.5] - 29/10/2019
+## [0.1.6] - 29/10/2019
 
 ### Updated
  - act-rules module
 
+## [0.1.5] - 29/10/2019
+
+### Updated
+ - act-rules module
 
 ## [0.1.4] - 29/10/2019
 
