--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.1.8] - 20/11/2019
+
+### Updated
+ - best-practices package
+ - html-techniques package
+
 ## [0.1.7] - 19/11/2019
 
 ### Updated
