--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.2.0] - 02/12/2019
+
+### Updated
+ - all rules to work with new core architecture
+
 ## [0.1.9] - 18/11/2019
 
 ### Fixed
