--- a/packages/best-practices/CHANGELOG
+++ b/packages/best-practices/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.2.0] - 02/12/2019
+
+### Updated
+ - best practices to work with new core architecture
+
 ## [0.1.2] - 20/11/2019
 
 ### Fixed
