--- a/packages/best-practices/CHANGELOG
+++ b/packages/best-practices/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.2.1] - 11/12/2019
+
+### Added
+ - QW-BP14 and QW-BP15
+
+### Fixed
+ - some best practices bugs
+
 ## [0.2.0] - 02/12/2019
 
 ### Updated
