updated css-techniques and best-practices modules

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.2.8] - 11/12/2019
+
+### Updated
+ - css-techniques module
+ - best-practices module
+
 ## [0.2.7] - 09/12/2019
 
 ### Updated
