fixed best practices and updated readme.md

--- a/packages/best-practices/CHANGELOG
+++ b/packages/best-practices/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.2.3] - 16/12/2019
+
+### Updated
+ - README.md
+
+### Fixed
+ - some best practices with errors and some tests
+
 ## [0.2.2] - 11/12/2019
 
 ### Fixed
