--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,14 @@
 # Changelog
 
+## [0.2.10] - 18/12/2019
+
+### Fixed
+ - some core bugs
+ - code optimization
+
+### Updated
+ - @qualweb/types module 
+
 ## [0.2.9] - 16/12/2019
 
 ### Updated
