code optimization and dependencies updated

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.2.12] - 18/12/2019
+
+### Fixed
+ - code optimization
+
+### Updated
+ - dependencies 
+
 ## [0.2.11] - 18/12/2019
 
 ### Fixed
