--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.2.7] - 07/01/2020
+
+### Fixed
+ - a bug where the report had incorrect values
+
 ## [0.2.6] - 07/01/2020
 
 ### Fixed
