--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.2.15] - 07/01/2020
+
+### Updated
+ - act-rules module
+
+### Fixed
+ - some bugs
+
 ## [0.2.14] - 07/01/2020
 
 ### Updated
