updated act-rules module and type deinitions

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -4,6 +4,12 @@
 
 ### Updated
  - act-rules module
+ - type definitions
+
+## [0.2.15] - 07/01/2020
+
+### Updated
+ - act-rules module
 
 ### Fixed
  - some bugs
