fixed some bugs

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,15 @@
 # Changelog
 
+## [0.2.17] - 07/01/2020
+
+### Fixed
+ - some bugs
+
+## [0.2.16] - 07/01/2020
+
+### Fixed
+ - some bugs
+
 ## [0.2.15] - 07/01/2020
 
 ### Updated
