updated rules architecture

--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,20 @@
 # Changelog
 
+## [0.3.5] - 07/01/2020
+
+### Changed
+ - rules architecture
+
+## [0.3.4] - 07/01/2020
+
+### Testing
+ - QW-ACT-R1 changes
+
+## [0.3.3] - 07/01/2020
+
+### Fixed
+ - some bugs
+
 ## [0.3.2] - 07/01/2020
 
 ### Changed
