fixed a bug with the inpage stylesheets

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.3.1] - 08/01/2020
+
+### Fixed
+ - a bug with the inpage stylesheets
+
 ## [0.3.0] - 08/01/2020
 
 ### Updated
