updated act-rules module

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,10 +1,14 @@
 # Changelog
 
-## [0.3.4] - 09/01/2020
+## [0.3.5] - 13/01/2020
 
 ### Updated
  - act-rules module
 
+## [0.3.4] - 09/01/2020
+
+### Updated
+ - act-rules module
 
 ## [0.3.3] - 08/01/2020
 
