--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.3.13] - 14/01/2020
+
+### Fixed
+ - rule QW-ACT-R31 mapping
+
+### Updated
+ - README.md
+
 ## [0.3.12] - 14/01/2020
 
 ### Added
