updated act-rules module and README.md

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,12 @@
 # Changelog
 
+## [0.3.7] - 14/01/2020
+
+### Updated
+ - act-rules module
+ - README.md
+
+
 ## [0.3.6] - 14/01/2020
 
 ### Updated
