--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,11 +1,15 @@
 # Changelog
 
+## [0.3.8] - 15/01/2020
+
+### Updated
+ - act-rules module
+
 ## [0.3.7] - 14/01/2020
 
 ### Updated
  - act-rules module
  - README.md
-
 
 ## [0.3.6] - 14/01/2020
 
