--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,17 @@
 # Changelog
 
+## [0.3.15] - 17/01/2020
+
+### Added
+ - rule QW-ACT-R29
+ - rule QW-ACT-R32
+
+### Updated
+ - README.md
+
+### Fixed
+ - QW-ACT-R34 bugs
+
 ## [0.3.14] - 15/01/2020
 
 ### Updated
