--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.3.9] - 17/01/2020
+
+### Updated
+ - act-rules module
+ - css-techniques module
+ - best-practices module
+ - earl-reporter module
+
 ## [0.3.8] - 15/01/2020
 
 ### Updated
