updated act-rules module, earl-reporter module and README.md

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.3.10] - 21/01/2020
+
+### Updated
+ - act-rules module
+ - earl-reporter module
+
 ## [0.3.9] - 17/01/2020
 
 ### Updated
