added rules QW-ACT-R38 and QW-ACT-R39

--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,14 @@
 # Changelog
 
+## [0.3.24] - 10/02/2020
+
+### Added
+ - rule QW-ACT-R38
+ - rule QW-ACT-R39
+
+### Updated
+ - README.md
+
 ## [0.3.23] - 06/02/2020
 
 ### Changed
