updated system and modules manager

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.3.13] - 17/02/2020
+
+### Updated
+ - act-rules module
+ - system and modules manager
+
 ## [0.3.12] - 22/01/2020
 
 ### Updated
