--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,15 @@
 # Changelog
 
+## [0.3.27] - 21/02/2020
+
+### Fixed
+ - some bugs
+
+## [0.3.26] - 17/02/2020
+
+### Fixed
+ - some bugs
+
 ## [0.3.25] - 17/02/2020
 
 ### Tested
