updated modules act-rules and html-techniques

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.3.15] - 18/03/2020
+
+### Updated
+ - act-rules module
+ - html-techniques module
+
 ## [0.3.14] - 21/02/2020
 
 ### Updated
