--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,10 +1,14 @@
 # Changelog
 
+## [0.3.31] - 14/04/2020
+
+### Fixed
+ - some bugs
+
 ## [0.3.30] - 19/03/2020
 
 ### Updated
  - @qualweb/util
-
 
 ## [0.3.30] - 18/03/2020
 
