--- a/packages/best-practices/CHANGELOG
+++ b/packages/best-practices/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.3.2] - 14/04/2020
+
+### Added
+ - QW-BP16
+
+### Updated
+ - dependencies
+
 ## [0.3.1] - 17/01/2020
 
 ### Updated
