updated dependencies, report interface and tests

--- a/packages/best-practices/CHANGELOG
+++ b/packages/best-practices/CHANGELOG
@@ -1,5 +1,12 @@
 # Changelog
 
+## [0.3.3] - 06/05/2020
+
+### Updated
+ - dependencies
+ - report interface
+ - tests
+
 ## [0.3.2] - 14/04/2020
 
 ### Added
