updated dependencies, tests, README.md

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,12 @@
 # Changelog
 
+## [0.3.18] - 06/05/2020
+
+### Updated
+ - dependencies
+ - tests
+ - README.md
+
 ## [0.3.16] - 22/03/2020
 
 ### Updated
