--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.3.36] - 06/05/2020
+
+### Fixed
+ - a bug in IsNotMathDocument decorator
+
 ## [0.3.35] - 06/05/2020
 
 ### Fixed
