--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,4 +1,13 @@
 # Changelog
+## [0.4.2] - 19/05/2020
+
+### Updated
+ - fixed r17 and r10
+
+## [0.4.0] - 10/05/2020
+
+### Updated
+ - new arquitecture
 
 ## [0.3.33] - 22/04/2020
 
