new version with assertion

--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,4 +1,8 @@
 # Changelog
+## [0.4.5] - 20/05/2020
+
+### Updated
+ - changed structure from rules to assertions
 ## [0.4.4] - 19/05/2020
 
 ### Updated
