--- a/packages/qw-element/CHANGELOG
+++ b/packages/qw-element/CHANGELOG
@@ -1,384 +1,6 @@
 # Changelog
 
-## [0.2.57] - 23/03/2020
+## [0.1.2] - 20/05/2020
 
 ### Fixed
- - isElementPresentation now available
-
-## [0.2.56] - 23/03/2020
-
-### Fixed
- - isElementFocusable bug
-
-## [0.2.55] - 18/03/2020
-
-### Fixed
- - getAccessibleName bug
-
-## [0.2.54] - 18/03/2020
-
-### Fixed
- - getSourceElementHtmlCode bug
-
-## [0.2.53] - 18/03/2020
-
-### Fixed
- - getSourceElementHtmlCode bug
-
-## [0.2.52] - 18/03/2020
-
-### Updated
- - dependencies
-
-## [0.2.51] - 20/02/2020
-
-### Fixed
- - getAccessibleName
-
-## [0.2.50] - 12/02/2020
-
-### Fixed
- - isElementFocusable
-
-## [0.2.49] - 12/02/2020
-
-### Fixed
- - implicitroles.json and getImplicitRole
-
-## [0.2.48] - 12/02/2020
-
-### Fixed
- - implicitroles.json
-
-## [0.2.47] - 12/02/2020
-
-### Fixed
- - getAccessibleName function
-
-## [0.2.46] - 06/02/2020
-
-### Added
- - AccessibilityUtils.isElementReferencedByAriaLabel function
-
-## [0.2.45] - 06/02/2020
-
-### Added
- - DomUtils.getVideoMetadata function
-
-## [0.2.44] - 06/02/2020
-
-### Fixed
- - some bugs
-
-## [0.2.43] - 06/02/2020
-
-### Updated
- - dependencies
- - DomUtils.getSourceElementAttribute function
- - DomUtils.getSourceElementHtmlCode function
- - DomUtils.getSourceElementSelector function
-
-## [0.2.42] - 29/01/2020
-
-### Updated
- - updated functions
-
-## [0.2.41] - 29/01/2020
-
-### Updated
- - updated functions
-
-## [0.2.40] - 29/01/2020
-
-### Updated
- - updated functions
-
-## [0.2.39] - 29/01/2020
-
-### Updated
- - updated functions
-
-## [0.2.39] - 29/01/2020
-
-### Testing
- - exporting DomUtils
-
-## [0.2.38] - 29/01/2020
-
-### Testing
- - export DomUtils as default
-
-## [0.2.37] - 29/01/2020
-
-### Updated
- - types
-
-## [0.2.36] - 29/01/2020
-
-### Updated
- - enum Optimization
-
-## [0.2.35] - 29/01/2020
-
-### Updated
- - enum Optimization
-
-## [0.2.34] - 28/01/2020
-
-### Added
- - fixed is elementHidden
-
-## [0.2.33] - 28/01/2020
-
-### Added
- - DomUtils.getSourceElementSelector
- - DomUtils.getSourceElementHtmlCode
-
-### Changed
- - getElementAttribute2 to getSourceElementAttribute
-
-## [0.2.32] - 23/01/2020
-
-### Fixed
- - typo getElemenVisible
- - typo elementHasGlobalARIAProportieOrAttribute
- - AccessibilityTreeUtils to AccessibilityTreeUtils
- - removed getElementName 
- - changed getElementName to getElementTagName
-
-## [0.2.31] - 23/01/2020
-
-### Fixed
- - a bug in getAccessibleNameSVG function
-
-## [0.2.30] - 22/01/2020
-
-### Added
- - isMathDocument function
- - getPageRootElement function
- - enum Optimization
-
-## [0.2.29] - 22/01/2020
-
-### Added
- - shadow dom functions
-
-## [0.2.28] - 22/01/2020
-
-### Updated
- - bug fix
-
-## [0.2.27] - 21/01/2020
-
-### Updated
- - some functions
-
-## [0.2.26] - 20/01/2020
-
-### Updated
- - some functions
-
-## [0.2.25] - 15/01/2020
-
-### Fixed
- - several functions bugs
-
-## [0.2.24] - 15/01/2020
-
-### Fixed
- - several functions bugs
-
-## [0.2.23] - 13/01/2020
-
-### Fixed
- - a bug in the getDefaultName function
-
-## [0.2.22] - 13/01/2020
-
-### Fixed
- - a bug in the isElementWidget function
-
-## [0.2.21] - 13/01/2020
-
-### Fixed
- - a bug in the isElementWidget function
-
-## [0.2.19] - 12/01/2020
-
-### Fixed
- - fixed heading bug
-
-## [0.2.19] - 12/01/2020
-
-### Fixed
- - small bug fix
-
-## [0.2.18] - 12/01/2020
-
-### Fixed
- - small bug fix
-
-## [0.2.17] - 12/01/2020
-
-### Fixed
- - small bug fix
-
-## [0.2.16] - 12/01/2020
-
-### Fixed
- - small bug fix
-
-## [0.2.15] - 12/01/2020
-
-### Fixed
- - added new AT functions
-
-## [0.2.14] - 08/01/2020
-
-### Fixed
- - video bug fix
-
-## [0.2.13] - 07/01/2020
-
-### Fixed
- - bug fix
-
-## [0.2.12] - 07/01/2020
-
-### Fixed
- - added Video Metadata
-
-## [0.2.11] - 06/01/2020
-
-### Fixed
- - Multiple minor bugs
-
-## [0.2.10] - 12/12/2019
-
-### Fixed
- - getElementChildTextContent function
-
-## [0.2.9] - 11/12/2019
-
-### Removed
- - getLabel.ts
-
-## [0.2.8] - 11/12/2019
-
-### Added
- - CssUtils
-
-## [0.2.7] - 06/12/2019
-
-### Added
- - isVisible working
-
-## [0.2.6] - 06/12/2019
-
-### Added
- - isVisible working
-
-## [0.2.5] - 05/12/2019
-
-### Added
- - bug fix
-
-## [0.2.4] - 05/12/2019
-
-### Added
- - isVisible and isOffScreen
-
-## [0.2.3] - 04/12/2019
-
-### Added
- - getElementAttributes function to DomUtils namespace
-
-## [0.2.2] - 03/12/2019
-
-### Changed
- - fixed empy before and after
-
-## [0.2.1] - 03/12/2019
-
-### Changed
- - multiple bug fixes
-
-## [0.2.0] - 02/12/2019
-
-### Changed
- - all features to work with the new core architecture
-
-## [0.1.10] - 05/11/2019
-
-### Updated
- - Accessible Name calculation fix for input elements
-
-## [0.1.9] - 31/10/2019
-
-### Updated
- - Data Table Verification
-
-## [0.1.8] - 29/10/2019
-
-### Updated
- - Added Accessible Name Calculation for SVG elements
-
-## [0.1.7] - 29/10/2019
-
-### Updated
- - Accessibility tree utility functions
-
-## [0.1.6] - 26/10/2019
-
-### Updated
- - Accessibility tree utility functions
-
-## [0.1.5] - 22/10/2019
-
-### Updated
- - Accessibility tree utility functions
-
-## [0.1.4] - 22/10/2019
-
-### Updated
- - Accessibility tree utility functions
-
-## [0.1.3] - 17/10/2019
-
-### Updated
- - Accessibility tree utility functions
-
-## [0.1.2] - 16/10/2019
-
-### Updated
- - Accessibility tree utility functions
-
-## [0.1.1] - 11/10/2019
-
-### Updated
- - Accessibility tree utility functions
-
-## [0.1.0] - 11/10/2019
-
-### Added
- - Accessibility tree utility functions
-
-## [0.0.4] - 10/10/2019
-
-### Fixed
- - bugs and optimized code
-
-## [0.0.3] - 10/10/2019
-
-### Added
- - more dom utilities functions
-
-## [0.0.2] - 09/10/2019
-
-### Added
- - more dom utilities functions
-
-## [0.0.1] - 07/10/2019
-
-### Added
- - dom utilities functions
+ - changed types
