--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,6 +1,6 @@
 # Changelog
+## [0.1.1] - 29/05/2020
+ - updated dependencies
 
-## [0.1.3] - 20/05/2020
-
-### Fixed
- - changed types
+## [0.1.0] - 29/05/2020
+ - new module
