--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,6 +1,7 @@
 # Changelog
 
-## [0.1.3] - 20/05/2020
+## [0.1.1] - 29/05/2020
+-updated dependencies
 
-### Fixed
- - changed types
+## [0.1.0] - 29/05/2020
+-new package
