--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,4 +1,9 @@
 # Changelog
+## [0.4.6] - 29/05/2020
+
+### Updated
+ - updated dependencies and bug fixes
+ 
 ## [0.4.5] - 20/05/2020
 
 ### Updated
