--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.5] - 31/05/2020
+- fixed options
 ## [0.1.4] - 31/05/2020
 - added act,html,bp and css to dependencies
 ## [0.1.3] - 29/05/2020
