--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,7 @@
 # Changelog
+## [0.1.3] - 08/06/2020
+ - fixed variable initialization
+
 ## [0.1.2] - 31/05/2020
  - fixed variable initialization
 
