--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,4 +1,8 @@
 # Changelog
+## [0.4.7] - 08/06/2020
+
+### Updated
+ - updated dependencies, fixed bugs and added rules 40 to 44
 ## [0.4.6] - 29/05/2020
 
 ### Updated
