--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.7] - 08/06/2020
+- fixed r40
 ## [0.1.6] - 08/06/2020
 - updated dependencies and added r40 specific code
 ## [0.1.5] - 31/05/2020
