--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,6 +1,11 @@
 # Changelog
+## [0.4.10] - 08/06/2020
+### Updated
+ - deleted process shadowDom
+## [0.4.9] - 08/06/2020
+### Updated
+ - deleted log
 ## [0.4.8] - 08/06/2020
-
 ### Updated
  - fixed isDocument
 ## [0.4.7] - 08/06/2020
