--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,4 +1,7 @@
 # Changelog
+## [0.4.11] - 08/06/2020
+### Updated
+ - multiple bug fixes
 ## [0.4.10] - 08/06/2020
 ### Updated
  - deleted process shadowDom
