--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,5 +1,7 @@
 # Changelog
-## [0.1.13] - 18/06/2020
+## [0.1.15] - 23/06/2020
+- updated act
+## [0.1.14] - 18/06/2020
 - updated act
 ## [0.1.13] - 18/06/2020
 - updated types
