--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,4 +1,10 @@
 # Changelog
+## [0.4.8] - 25/06/2020
+### Fixed
+ - Updated dependencies
+## [0.4.7] - 25/06/2020
+### Fixed
+ - Updated dependencies
 ## [0.4.6] - 23/06/2020
 
 ### Fixed
