Updated dependencies. Code optimization

--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,7 @@
 # Changelog
+## [0.1.11] - 03/07/2020
+ - updated dependencies
+ - code optimizations
 ## [0.1.10] - 02/07/2020
  - updated dependencies
 ## [0.1.9] - 25/06/2020
