Updated dependencies. Code optimization

--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.16] - 03/07/2020
+ - updated dependencies, code optimizations
 ## [0.1.15] - 23/06/2020
 - updated act
 ## [0.1.14] - 18/06/2020
