Updated dependencies. Code optimization

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,4 +1,8 @@
 # Changelog
+## [0.4.9] - 03/07/2020
+### Updated
+ - dependencies
+ - code optimization
 ## [0.4.8] - 25/06/2020
 ### Fixed
  - Updated dependencies
