--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,8 @@
 # Changelog
+## [0.1.19] - 03/07/2020
+ - css-techniques updated
+## [0.1.18] - 03/07/2020
+ - bugs fixed
 ## [0.1.17] - 03/07/2020
  - updated dependencies, code optimizations
 ## [0.1.15] - 23/06/2020
