Updated dependencies. Fixed some bugs related to css rules mapping

--- a/packages/qw-page/CHANGELOG
+++ b/packages/qw-page/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.1.9] - 06/07/2020
+
+### Updated
+ - dependencies
+
+### Fixed
+ - css rules mapping
+
 ## [0.1.8] - 06/07/2020
 
 ### Added
