--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.13] - 06/07/2020
+ - updated dependencies
 ## [0.1.12] - 06/07/2020
  - updated dependencies
  - code optimizations
