--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,9 @@
 # Changelog
 
+## [0.4.16] - 10/07/2020
+### Added
+ - cache
+
 ## [0.4.15] - 02/07/2020
 ### Added
  - rules QW-ACT-R45, QW-ACT-R46, QW-ACT-R47
