--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.20] - 10/07/2020
+ - updated dependencies
 ## [0.1.19] - 03/07/2020
  - css-techniques updated
 ## [0.1.18] - 03/07/2020
