--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,9 @@
 # Changelog
 
+## [0.4.18] - 20/07/2020
+### Fixed
+ - AcessibleNames on report in R8 and R17
+
 ## [0.4.17] - 10/07/2020
 ### Fixed
  - QW-ACT-R7
