--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,8 @@
 # Changelog
+## [0.1.15] - 27/07/2020
+ - updated dependencies
+## [0.1.14] - 06/07/2020
+ - updated dependencies
 ## [0.1.13] - 06/07/2020
  - updated dependencies
 ## [0.1.12] - 06/07/2020
