--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,8 @@
 # Changelog
+## [0.1.28] - 27/07/2020
+ - dependencies updated
+## [0.1.27] - 27/07/2020
+ - dependencies updated
 ## [0.1.26] - 11/07/2020
 - tests updated
 ## [0.1.25] - 11/07/2020
