--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,4 +1,10 @@
 # Changelog
+## [0.4.12] - 27/07/2020
+### Updated
+ - dependencies
+## [0.4.11] - 11/07/2020
+### Updated
+ - dependencies
 ## [0.4.10] - 11/07/2020
 ### Updated
  - dependencies
