--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,5 +1,7 @@
 # Changelog
 
+## [0.1.29] - 28/07/2020
+ - dependencies updated
 ## [0.1.28] - 27/07/2020
  - dependencies updated
 ## [0.1.27] - 13/07/2020
