--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,5 +1,8 @@
 # Changelog
 
+## [0.1.31] - 06/08/2020
+ - dependencies updated
+ - url bugs fixed
 ## [0.1.30] - 29/07/2020
  - dependencies updated
 ## [0.1.29] - 28/07/2020
