--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,5 +1,7 @@
 # Changelog
 
+## [0.1.32] - 07/08/2020
+ - dependencies updated
 ## [0.1.31] - 06/08/2020
  - dependencies updated
  - url bugs fixed
