--- a/packages/qw-page/CHANGELOG
+++ b/packages/qw-page/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.1.17] - 10/08/2020
+
+### Updated
+  - iframe and shadowDom support
+
 ## [0.1.16] - 27/07/2020
 
 ### Updated
