--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,4 +1,7 @@
 # Changelog
+## [0.4.24] - 21/09/2020
+### Fixed
+ - multiple bugs and optimized performance
 ## [0.4.23] - 16/09/2020
 ### Fixed
  - ePortugal bug
