--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.35] - 21/08/2020
+ - dependencies updated
 ## [0.1.34] - 16/08/2020
  - dependencies updated
 ## [0.1.33] - 07/08/2020
