--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.17] - 26/08/2020
+ - updated dependencies
 ## [0.1.16] - 16/08/2020
  - shadowDom to QWPage
 ## [0.1.15] - 27/07/2020
