--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.36] - 27/08/2020
+ - added QWPage to window
 ## [0.1.35] - 21/08/2020
  - dependencies updated
 ## [0.1.34] - 16/08/2020
