--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.21] - 03/09/2020
+ - added validator
 ## [0.1.20] - 27/08/2020
  - changed flag to loaded
 ## [0.1.17] - 26/08/2020
