--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,8 @@
 # Changelog
+## [0.1.24] - 03/09/2020
+ - fixed lasige website
+## [0.1.23] - 03/09/2020
+ - bug fixes
 ## [0.1.22] - 03/09/2020
  - added validator
 ## [0.1.21] - 27/08/2020
