--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,7 @@
 # Changelog
+## [0.1.38] - 07/09/2020
+ - updated dependencies
+ - fixed bugs
 ## [0.1.37] - 27/08/2020
  - added QWPage to window
 ## [0.1.36] - 25/08/2020
