--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,11 +1,14 @@
 # Changelog
-## [0.4.25] - 27/09/2020
+## [0.4.26] - 08/09/2020
+### Fixed
+ - multiple bugs fixes
+## [0.4.25] - 27/08/2020
 ### Fixed
  - multiple bugs and optimized performance
-## [0.4.24] - 21/09/2020
+## [0.4.24] - 21/08/2020
 ### Fixed
  - multiple bugs and optimized performance
-## [0.4.23] - 16/09/2020
+## [0.4.23] - 16/08/2020
 ### Fixed
  - ePortugal bug
 
