--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.25] - 08/09/2020
+ - fixed validator end of json
 ## [0.1.24] - 03/09/2020
  - fixed lasige website
 ## [0.1.23] - 03/09/2020
