--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,4 +1,9 @@
 # Changelog
+
+## [0.4.18] - 16/09/2020
+### Updated
+ - dom and evaluation dependencies
+
 ## [0.4.17] - 25/08/2020
 ### Updated
  - dependencies
