--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,9 @@
 # Changelog
 
+## [0.4.20] - 18/09/2020
+### Updated
+ - dom and evaluation dependencies
+
 ## [0.4.19] - 16/09/2020
 ### Updated
  - dom and evaluation dependencies
