--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,4 +1,7 @@
 # Changelog
+## [0.4.28] - 22/09/2020
+### Fixed
+ - updated util
 ## [0.4.27] - 17/09/2020
 ### Fixed
  - changed r45 to owner element
