--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.42] - 23/09/2020
+ - updated dependencies
 ## [0.1.41] - 18/09/2020
  - updated dependencies
 ## [0.1.40] - 08/09/2020
