--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.4.21] - 23/09/2020
+### Updated
+ - dom and evaluation dependencies
+
+## [0.4.21] - 23/09/2020
+### Updated
+ - dom and evaluation dependencies
+
 ## [0.4.20] - 18/09/2020
 ### Updated
  - dom and evaluation dependencies
