--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,6 +1,17 @@
 # Changelog
 
-## [0.4.21] - 23/09/2020
+## [0.4.25] - 23/09/2020
+### Updated
+ - deleted logs
+
+## [0.4.24] - 23/09/2020
+### Updated
+ - dom and evaluation dependencies
+## [0.4.23] - 23/09/2020
+### Updated
+ - dom and evaluation dependencies
+
+## [0.4.22] - 23/09/2020
 ### Updated
  - dom and evaluation dependencies
 
