--- a/packages/qw-element/CHANGELOG
+++ b/packages/qw-element/CHANGELOG
@@ -1,4 +1,13 @@
 # Changelog
+## [0.1.23] - 29/09/2020
+
+### Updated
+ - bug fixes
+
+## [0.1.22] - 23/09/2020
+
+### Updated
+ - bug fixes
 
 ## [0.1.21] - 23/09/2020
 
