Updated dependencies. Code refactor. Updated tests. Updated README.md

--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.4.28] - 08/10/2020
+### Updated
+ - dependencies
+ - code refactor
+ - tests
+
 ## [0.4.27] - 03/10/2020
 ### Updated
  - dependencies
