Updated dependencies. Removed QW-BP16. Fixed some bugs

--- a/packages/best-practices/CHANGELOG
+++ b/packages/best-practices/CHANGELOG
@@ -1,5 +1,16 @@
 # Changelog
 
+## [0.4.10] - 12/010/2020
+
+### Fixed
+ - some bugs 
+
+### Updated
+ - dependencies
+
+### Removed
+ - QW-BP16
+
 ## [0.4.9] - 29/09/2020
 
 ### Added
