--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.48] - 12/10/2020
+ - updated dependencies
 ## [0.1.47] - 03/10/2020
  - updated dependencies
 ## [0.1.46] - 29/09/2020
