--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,7 @@
 # Changelog
+## [0.1.27] - 21/10/2020
+ - updated dependencies
+ - updated validator endpoint
 ## [0.1.26] - 18/09/2020
  - only runs validator and node fetch when needed
 ## [0.1.25] - 08/09/2020
