--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.51] - 05/11/2020
+ - updated dependencies
 ## [0.1.50] - 02/11/2020
  - added wcag techniques
 ## [0.1.49] - 15/10/2020
