--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.4.37] - 10/11/2020
+### Updated
+ - README.md
+
+## [0.4.36] - 10/11/2020
+### Updated
+ - dependencies
+
 ## [0.4.35] - 05/11/2020
 ### Updated
  - dependencies
