--- a/packages/best-practices/CHANGELOG
+++ b/packages/best-practices/CHANGELOG
@@ -1,11 +1,16 @@
 # Changelog
 
-## [0.4.11] - 12/010/2020
+## [0.4.12] - 10/11/2020
+
+### Updated
+ - dependencies
+
+## [0.4.11] - 12/10/2020
 
 ### Fixed
  - some bugs 
 
-## [0.4.10] - 12/010/2020
+## [0.4.10] - 12/10/2020
 
 ### Fixed
  - some bugs 
