--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.53] - 11/11/2020
+ - updated dependencies
 ## [0.1.52] - 10/11/2020
  - updated dependencies
  - fixed some bugs
