--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.28] - 11/11/2020
+ - updated dependencies
 ## [0.1.27] - 21/10/2020
  - updated dependencies
  - updated validator endpoint
