--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.56] - 11/12/2020
+ - updated dependencies
 ## [0.1.55] - 05/12/2020
  - updated dependencies
 ## [0.1.54] - 11/11/2020
