--- a/packages/qw-page/CHANGELOG
+++ b/packages/qw-page/CHANGELOG
@@ -1,6 +1,11 @@
 # Changelog
 
-## [0.1.31] - 11/11/2020
+## [0.1.32] - 11/12/2020
+
+### Updated
+ - bug fix
+
+## [0.1.31] - 11/12/2020
 
 ### Updated
  - dependencies
