--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,6 +1,10 @@
 # Changelog
 
-## [0.4.42] - 1/12/2020
+## [0.4.43] - 16/12/2020
+### Updated
+ - dependencies
+
+## [0.4.42] - 10/12/2020
 ### Updated
  - dependencies
 
