--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.58] - 06/01/2021
+ - updated dependencies
 ## [0.1.57] - 14/12/2020
  - updated dependencies
 ## [0.1.56] - 11/12/2020
