Updated dependencies and web+ack config

--- a/packages/best-practices/CHANGELOG
+++ b/packages/best-practices/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.4.13] - 08/01/2021
+
+### Updated
+ - dependencies
+ - webpack config
+
 ## [0.4.12] - 10/11/2020
 
 ### Updated
