Updated dependecies. Fixed some bugs

--- a/packages/qw-page/CHANGELOG
+++ b/packages/qw-page/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.1.35] - 11/01/2021
+
+### Updated
+ - dependencies
+
+### Fixed
+ - known bugs
+
 ## [0.1.33] - 06/01/2021
 
 ### Fixed
