--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.60] - 11/01/2021
+ - updated dependencies
 ## [0.1.59] - 06/01/2021
  - updated dependencies
 ## [0.1.58] - 06/01/2021
