--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.4.46] - 11/01/2021
+### Updated
+ - dependencies
+
+## [0.4.45] - 06/01/2021
+### Updated
+ - dependencies
+
 ## [0.4.44] - 06/01/2021
 ### Updated
  - dependencies
