--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.4.42] - 23/01/2021
+### Fixed
+ - fixed r67, r68, r69
+
+### Added
+ - ACT-R71 - `meta` element has no refresh delay (no exception)
+ - ACT-R72 - First focusable element is link to non-repeated content
+
 ## [0.4.41] - 14/01/2021
 ### Updated
  - fixed r22
