update and new rule

--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,7 @@
 # Changelog
+## [0.1.62] - 23/01/2021
+ - updated dependencies
+ - added support for qw-act-r72
 ## [0.1.61] - 14/01/2021
  - updated dependencies
 ## [0.1.60] - 11/01/2021
