--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.63] - 25/01/2021
+ - updated dependencies
 ## [0.1.62] - 23/01/2021
  - updated dependencies
  - added support for qw-act-r72
