--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,17 @@
 # Changelog
 
+## [0.4.49] - 25/01/2021
+### Updated
+ - dependencies
+
+## [0.4.48] - 25/01/2021
+### Updated
+ - dependencies
+
+## [0.4.47] - 25/01/2021
+### Updated
+ - dependencies
+
 ## [0.4.46] - 11/01/2021
 ### Updated
  - dependencies
