--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.67] - 08/02/2021
+ - updated dependencies
 ## [0.1.65] - 25/01/2021
  - fixed missing dependency
 ## [0.1.64] - 25/01/2021
