Updated dependencies. README.md updated.

--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,7 @@
 # Changelog
+## [0.1.29] - 20/02/2021
+ - updated dependencies
+ - updated README.md
 ## [0.1.28] - 11/11/2020
  - updated dependencies
 ## [0.1.27] - 21/10/2020
