Updated dependencies. README.md updated.

--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,7 @@
 # Changelog
+## [0.1.68] - 20/02/2021
+ - updated dependencies
+ - updated README.md
 ## [0.1.67] - 08/02/2021
  - updated dependencies
 ## [0.1.65] - 25/01/2021
