--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## [0.4.53] - 20/02/2021
+### Updated
+ - dependencies
+ - README.md
+
 ## [0.4.51] - 08/02/2021
 ### Updated
  - dependencies
