--- a/packages/qw-element/CHANGELOG
+++ b/packages/qw-element/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.1.32] - 23/02/2021
+
+### Added
+ - click function to interface
+
+### Updated
+ - dependencies
+
 ## [0.1.31] - 20/02/2021
 
 ### Updated
