--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.72] - 01/03/2021
+ - updated dependencies
 ## [0.1.71] - 27/02/2021
  - added @qualweb/counter module
 ## [0.1.70] - 26/02/2021
