--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,25 @@
 # Changelog
 
+## [0.4.58] - 01/03/2021
+### Updated
+ - dependencies
+
+## [0.4.57] - 27/02/2021
+### Updated
+ - dependencies
+
+## [0.4.56] - 26/02/2021
+### Updated
+ - dependencies
+
+## [0.4.55] - 25/02/2021
+### Updated
+ - dependencies
+
+## [0.4.54] - 23/02/2021
+### Updated
+ - dependencies
+
 ## [0.4.53] - 20/02/2021
 ### Updated
  - dependencies
