--- a/packages/core/CHANGELOG
+++ b/packages/core/CHANGELOG
@@ -1,5 +1,9 @@
 # Changelog
 
+## [0.4.59] - 03/03/2021
+### Added
+ - element and role counter
+
 ## [0.4.58] - 01/03/2021
 ### Updated
  - dependencies
