--- a/packages/evaluation/CHANGELOG
+++ b/packages/evaluation/CHANGELOG
@@ -1,4 +1,6 @@
 # Changelog
+## [0.1.74] - 01/03/2021
+ - updated dependencies
 ## [0.1.73] - 01/03/2021
  - updated dependencies
 ## [0.1.72] - 01/03/2021
