--- a/packages/dom/CHANGELOG
+++ b/packages/dom/CHANGELOG
@@ -1,4 +1,8 @@
 # Changelog
+## [0.1.34] - 08/03/2021
+ - bugs fixed
+## [0.1.33] - 03/03/2021
+ - potential fix for preventing meta redirect  
 ## [0.1.32] - 02/03/2021
  - bugs fixed
 ## [0.1.31] - 01/03/2021
