bugs fixed. Dependencies updated

--- a/packages/act-rules/CHANGELOG
+++ b/packages/act-rules/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.4.54] - 08/03/2021
+
+### Updated
+ - dependencies
+
+### Fixed
+ - known bugs
+
 ## [0.4.53] - 02/03/2021
 
 ### Fixed
