--- a/packages/locale/src/locales/en.json
+++ b/packages/locale/src/locales/en.json
@@ -521,7 +521,7 @@
       "results": {
         "I1": "No test targets found.",
         "W1": "Can't collect data from the test target.",
-        "W2": "The test target has a sound track but we can't verify the volume. Check if the test target has audio and if it does check if visual content has an accessible alternative."
+        "W2": "The test target has a sound track but we can't verify the volume. Check if the test target has audio and if it does check if audio content has matching captions."
       }
     },
     "QW-ACT-R61": {
